{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 13,
  "lineage": "c1aa7c8e-4084-b296-16e5-18e6102b7569",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:272603991089:instance/i-07eac74f82ad4ee4b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07eac74f82ad4ee4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cae73c6e8e5caea7",
            "private_dns": "ip-10-0-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0619a06462959b632",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f65235789aa14527",
            "tags": {
              "Name": "exam-instance"
            },
            "tags_all": {
              "Name": "exam-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efd5e7cf085b7791"
            ]
          },
          "dependencies": [
            "aws_security_group.exam",
            "aws_subnet.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:internet-gateway/igw-00237990a386643c1",
            "id": "igw-00237990a386643c1",
            "owner_id": "272603991089",
            "tags": {
              "Name": "exam-internet-gateway"
            },
            "tags_all": {
              "Name": "exam-internet-gateway"
            },
            "vpc_id": "vpc-06f751487d4084f7b"
          },
          "dependencies": [
            "aws_vpc.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:272603991089:targetgroup/exam20230421105350153000000001/31c058040aba3a4d",
            "arn_suffix": "targetgroup/exam20230421105350153000000001/31c058040aba3a4d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:272603991089:targetgroup/exam20230421105350153000000001/31c058040aba3a4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "exam20230421105350153000000001",
            "name_prefix": "exam",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f751487d4084f7b"
          },
          "dependencies": [
            "aws_vpc.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:route-table/rtb-069b7a04c75fa51e3",
            "id": "rtb-069b7a04c75fa51e3",
            "owner_id": "272603991089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00237990a386643c1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exam-route-table"
            },
            "tags_all": {
              "Name": "exam-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f751487d4084f7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.exam",
            "aws_vpc.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b3b10d980915f25",
            "route_table_id": "rtb-069b7a04c75fa51e3",
            "subnet_id": "subnet-0f65235789aa14527"
          },
          "dependencies": [
            "aws_internet_gateway.exam",
            "aws_route_table.exam",
            "aws_subnet.exam",
            "aws_vpc.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:security-group/sg-0efd5e7cf085b7791",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efd5e7cf085b7791",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "exam20230421105350154100000002",
            "name_prefix": "exam",
            "owner_id": "272603991089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "exam-security-group"
            },
            "tags_all": {
              "Name": "exam-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f751487d4084f7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:subnet/subnet-0f65235789aa14527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f65235789aa14527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272603991089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exam-subnet"
            },
            "tags_all": {
              "Name": "exam-subnet"
            },
            "vpc_id": "vpc-06f751487d4084f7b"
          },
          "dependencies": [
            "aws_vpc.exam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:vpc/vpc-06f751487d4084f7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a47e13dffc9c269",
            "default_route_table_id": "rtb-042eff2157afd920d",
            "default_security_group_id": "sg-08fc413f7651a368a",
            "dhcp_options_id": "dopt-085f7cd0f6abe143b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f751487d4084f7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042eff2157afd920d",
            "owner_id": "272603991089",
            "tags": {
              "Name": "exam"
            },
            "tags_all": {
              "Name": "exam"
            }
          }
        }
      ]
    }
  ]
}